fixed spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3972,7 +3972,6 @@
 						display: block;
 						font-size: 0.9em;
 						letter-spacing: 0.05em;
-						padding: 0.2em 3em
 					}
 
 						#header nav > ul > li > a.menuToggle {
